CS 445 - Compilers/parser.output
Rules useless in parser due to conflicts

  123 arglist: arglist COMMA expression
  124        | expression


State 36 conflicts: 1 shift/reduce
State 44 conflicts: 1 shift/reduce
State 45 conflicts: 1 shift/reduce
State 140 conflicts: 2 reduce/reduce
State 181 conflicts: 2 shift/reduce
State 197 conflicts: 2 reduce/reduce
State 200 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: declarationlist

    2 declarationlist: declarationlist declaration
    3                | declaration
    4                | error

    5 declaration: vardeclaration
    6            | fundeclaration

    7 vardeclaration: typespecifier vardecllist SEMI
    8               | typespecifier error SEMI

    9 scopedvardeclaration: scopedtypespecifier vardecllist SEMI
   10                     | scopedtypespecifier error SEMI

   11 vardecllist: vardecllist COMMA vardeclinitialize
   12            | vardeclinitialize
   13            | error COMMA vardeclinitialize

   14 vardeclinitialize: vardeclid
   15                  | vardeclid COLON simpleexpression
   16                  | error COLON simpleexpression
   17                  | vardeclid COLON error

   18 vardeclid: ID
   19          | ID LBRACKET NUMCONST RBRACKET
   20          | error LBRACKET NUMCONST RBRACKET
   21          | ID LBRACKET error

   22 scopedtypespecifier: STATIC typespecifier
   23                    | typespecifier

   24 typespecifier: INT
   25              | BOOL
   26              | CHAR

   27 fundeclaration: typespecifier ID LPAREN params RPAREN statement
   28               | ID LPAREN params RPAREN statement
   29               | typespecifier error LPAREN params RPAREN statement
   30               | typespecifier ID LPAREN error
   31               | ID LPAREN error RPAREN statement
   32               | error LPAREN statement

   33 params: paramlist
   34       | %empty

   35 paramlist: paramlist SEMI paramtypelist
   36          | paramtypelist
   37          | error SEMI paramtypelist

   38 paramtypelist: typespecifier paramidlist
   39              | typespecifier error

   40 paramidlist: paramidlist COMMA paramid
   41            | paramid
   42            | error COMMA paramid
   43            | paramidlist COMMA error

   44 paramid: ID
   45        | ID LBRACKET RBRACKET
   46        | error LBRACKET RBRACKET
   47        | ID LBRACKET error

   48 statement: matchedselectionstmt
   49          | unmatchedselectionstmt
   50          | matchedselectionstmt error
   51          | unmatchedselectionstmt error

   52 sstatement: expressionstmt
   53           | compoundstmt
   54           | returnstmt
   55           | breakstmt

   56 compoundstmt: LBRACE localdeclarations statementlist RBRACE
   57             | error RBRACE
   58             | LBRACE error statementlist RBRACE

   59 localdeclarations: localdeclarations scopedvardeclaration
   60                  | %empty

   61 statementlist: statementlist statement
   62              | %empty
   63              | statementlist error

   64 expressionstmt: expression SEMI
   65               | SEMI
   66               | error SEMI

   67 matchedselectionstmt: IF LPAREN simpleexpression RPAREN matchedselectionstmt ELSE matchedselectionstmt
   68                     | WHILE LPAREN simpleexpression RPAREN matchedselectionstmt
   69                     | FOREACH LPAREN mutable IN simpleexpression RPAREN matchedselectionstmt
   70                     | sstatement

   71 unmatchedselectionstmt: IF LPAREN simpleexpression RPAREN statement
   72                       | IF LPAREN simpleexpression RPAREN matchedselectionstmt ELSE unmatchedselectionstmt
   73                       | WHILE LPAREN simpleexpression RPAREN unmatchedselectionstmt
   74                       | FOREACH LPAREN mutable IN simpleexpression RPAREN unmatchedselectionstmt

   75 returnstmt: RETURN SEMI
   76           | RETURN expression SEMI

   77 breakstmt: BREAK SEMI

   78 expression: mutable ASSIGN expression
   79           | mutable PASSIGN expression
   80           | mutable MASSIGN expression
   81           | mutable INC
   82           | mutable DEC
   83           | simpleexpression

   84 simpleexpression: simpleexpression OR andexpression
   85                 | andexpression

   86 andexpression: andexpression AND unaryrelexpression
   87              | unaryrelexpression

   88 unaryrelexpression: NOT unaryrelexpression
   89                   | relexpression

   90 relexpression: sumexpression relop sumexpression
   91              | sumexpression

   92 relop: LEQ
   93      | LESSER
   94      | GREATER
   95      | GEQ
   96      | EQUIV
   97      | NEQ

   98 sumexpression: sumexpression sumop term
   99              | term

  100 sumop: PLUS
  101      | MINUS

  102 term: term mulop unaryexpression
  103     | unaryexpression

  104 mulop: MULTI
  105      | DIVIDE
  106      | MOD

  107 unaryexpression: unaryop unaryexpression
  108                | factor

  109 unaryop: MINUS
  110        | MULTI

  111 factor: immutable
  112       | mutable

  113 mutable: ID
  114        | ID LBRACKET expression RBRACKET

  115 immutable: LPAREN expression RPAREN
  116          | call
  117          | constant

  118 call: ID LPAREN args RPAREN

  119 args: arglist
  120     | %empty

  121 arglist: arglist COMMA expression
  122        | expression
  123        | arglist COMMA expression
  124        | expression

  125 constant: NUMCONST
  126         | CHARCONST
  127         | STRINGCONST
  128         | TRUE
  129         | FALSE


Terminals, with rules where they appear

$end (0) 0
error (256) 4 8 10 13 16 17 20 21 29 30 31 32 37 39 42 43 46 47 50
    51 57 58 63 66
ID (258) 18 19 21 27 28 30 31 44 45 47 113 114 118
NUMCONST (259) 19 20 125
CHARCONST (260) 126
STRINGCONST (261) 127
AND (262) 86
BREAK (263) 77
BOOL (264) 25
CHAR (265) 26
ELSE (266) 67 72
FALSE (267) 129
FOREACH (268) 69 74
IF (269) 67 71 72
IN (270) 69 74
INT (271) 24
OR (272) 84
NOT (273) 88
RETURN (274) 75 76
TRUE (275) 128
STATIC (276) 22
WHILE (277) 68 73
COMMA (278) 11 13 40 42 43 121 123
LBRACKET (279) 19 20 21 45 46 47 114
RBRACKET (280) 19 20 45 46 114
LPAREN (281) 27 28 29 30 31 32 67 68 69 71 72 73 74 115 118
RPAREN (282) 27 28 29 31 67 68 69 71 72 73 74 115 118
LBRACE (283) 56 58
RBRACE (284) 56 57 58
SEMI (285) 7 8 9 10 35 37 64 65 66 75 76 77
EQUIV (286) 96
NEQ (287) 97
LEQ (288) 92
LESSER (289) 93
GEQ (290) 95
GREATER (291) 94
ASSIGN (292) 78
PASSIGN (293) 79
MASSIGN (294) 80
DEC (295) 82
INC (296) 81
COLON (297) 15 16 17
PLUS (298) 100
MINUS (299) 101 109
DIVIDE (300) 105
MOD (301) 106
MULTI (302) 104 110


Nonterminals, with rules where they appear

$accept (48)
    on left: 0
program (49)
    on left: 1, on right: 0
declarationlist (50)
    on left: 2 3 4, on right: 1 2
declaration (51)
    on left: 5 6, on right: 2 3
vardeclaration (52)
    on left: 7 8, on right: 5
scopedvardeclaration (53)
    on left: 9 10, on right: 59
vardecllist (54)
    on left: 11 12 13, on right: 7 9 11
vardeclinitialize (55)
    on left: 14 15 16 17, on right: 11 12 13
vardeclid (56)
    on left: 18 19 20 21, on right: 14 15 17
scopedtypespecifier (57)
    on left: 22 23, on right: 9 10
typespecifier (58)
    on left: 24 25 26, on right: 7 8 22 23 27 29 30 38 39
fundeclaration (59)
    on left: 27 28 29 30 31 32, on right: 6
params (60)
    on left: 33 34, on right: 27 28 29
paramlist (61)
    on left: 35 36 37, on right: 33 35
paramtypelist (62)
    on left: 38 39, on right: 35 36 37
paramidlist (63)
    on left: 40 41 42 43, on right: 38 40 43
paramid (64)
    on left: 44 45 46 47, on right: 40 41 42
statement (65)
    on left: 48 49 50 51, on right: 27 28 29 31 32 61 71
sstatement (66)
    on left: 52 53 54 55, on right: 70
compoundstmt (67)
    on left: 56 57 58, on right: 53
localdeclarations (68)
    on left: 59 60, on right: 56 59
statementlist (69)
    on left: 61 62 63, on right: 56 58 61 63
expressionstmt (70)
    on left: 64 65 66, on right: 52
matchedselectionstmt (71)
    on left: 67 68 69 70, on right: 48 50 67 68 69 72
unmatchedselectionstmt (72)
    on left: 71 72 73 74, on right: 49 51 72 73 74
returnstmt (73)
    on left: 75 76, on right: 54
breakstmt (74)
    on left: 77, on right: 55
expression (75)
    on left: 78 79 80 81 82 83, on right: 64 76 78 79 80 114 115 121
    122 123 124
simpleexpression (76)
    on left: 84 85, on right: 15 16 67 68 69 71 72 73 74 83 84
andexpression (77)
    on left: 86 87, on right: 84 85 86
unaryrelexpression (78)
    on left: 88 89, on right: 86 87 88
relexpression (79)
    on left: 90 91, on right: 89
relop (80)
    on left: 92 93 94 95 96 97, on right: 90
sumexpression (81)
    on left: 98 99, on right: 90 91 98
sumop (82)
    on left: 100 101, on right: 98
term (83)
    on left: 102 103, on right: 98 99 102
mulop (84)
    on left: 104 105 106, on right: 102
unaryexpression (85)
    on left: 107 108, on right: 102 103 107
unaryop (86)
    on left: 109 110, on right: 107
factor (87)
    on left: 111 112, on right: 108
mutable (88)
    on left: 113 114, on right: 69 74 78 79 80 81 82 112
immutable (89)
    on left: 115 116 117, on right: 111
call (90)
    on left: 118, on right: 116
args (91)
    on left: 119 120, on right: 118
arglist (92)
    on left: 121 122 123 124, on right: 119 121 123
constant (93)
    on left: 125 126 127 128 129, on right: 117


State 0

    0 $accept: . program $end

    error  shift, and go to state 1
    ID     shift, and go to state 2
    BOOL   shift, and go to state 3
    CHAR   shift, and go to state 4
    INT    shift, and go to state 5

    program          go to state 6
    declarationlist  go to state 7
    declaration      go to state 8
    vardeclaration   go to state 9
    typespecifier    go to state 10
    fundeclaration   go to state 11


State 1

    4 declarationlist: error .
   32 fundeclaration: error . LPAREN statement

    LPAREN  shift, and go to state 12

    $default  reduce using rule 4 (declarationlist)


State 2

   28 fundeclaration: ID . LPAREN params RPAREN statement
   31               | ID . LPAREN error RPAREN statement

    LPAREN  shift, and go to state 13


State 3

   25 typespecifier: BOOL .

    $default  reduce using rule 25 (typespecifier)


State 4

   26 typespecifier: CHAR .

    $default  reduce using rule 26 (typespecifier)


State 5

   24 typespecifier: INT .

    $default  reduce using rule 24 (typespecifier)


State 6

    0 $accept: program . $end

    $end  shift, and go to state 14


State 7

    1 program: declarationlist .
    2 declarationlist: declarationlist . declaration

    error  shift, and go to state 15
    ID     shift, and go to state 2
    BOOL   shift, and go to state 3
    CHAR   shift, and go to state 4
    INT    shift, and go to state 5

    $end  reduce using rule 1 (program)

    declaration     go to state 16
    vardeclaration  go to state 9
    typespecifier   go to state 10
    fundeclaration  go to state 11


State 8

    3 declarationlist: declaration .

    $default  reduce using rule 3 (declarationlist)


State 9

    5 declaration: vardeclaration .

    $default  reduce using rule 5 (declaration)


State 10

    7 vardeclaration: typespecifier . vardecllist SEMI
    8               | typespecifier . error SEMI
   27 fundeclaration: typespecifier . ID LPAREN params RPAREN statement
   29               | typespecifier . error LPAREN params RPAREN statement
   30               | typespecifier . ID LPAREN error

    error  shift, and go to state 17
    ID     shift, and go to state 18

    vardecllist        go to state 19
    vardeclinitialize  go to state 20
    vardeclid          go to state 21


State 11

    6 declaration: fundeclaration .

    $default  reduce using rule 6 (declaration)


State 12

   32 fundeclaration: error LPAREN . statement

    error        shift, and go to state 22
    ID           shift, and go to state 23
    NUMCONST     shift, and go to state 24
    CHARCONST    shift, and go to state 25
    STRINGCONST  shift, and go to state 26
    BREAK        shift, and go to state 27
    FALSE        shift, and go to state 28
    FOREACH      shift, and go to state 29
    IF           shift, and go to state 30
    NOT          shift, and go to state 31
    RETURN       shift, and go to state 32
    TRUE         shift, and go to state 33
    WHILE        shift, and go to state 34
    LPAREN       shift, and go to state 35
    LBRACE       shift, and go to state 36
    SEMI         shift, and go to state 37
    MINUS        shift, and go to state 38
    MULTI        shift, and go to state 39

    statement               go to state 40
    sstatement              go to state 41
    compoundstmt            go to state 42
    expressionstmt          go to state 43
    matchedselectionstmt    go to state 44
    unmatchedselectionstmt  go to state 45
    returnstmt              go to state 46
    breakstmt               go to state 47
    expression              go to state 48
    simpleexpression        go to state 49
    andexpression           go to state 50
    unaryrelexpression      go to state 51
    relexpression           go to state 52
    sumexpression           go to state 53
    term                    go to state 54
    unaryexpression         go to state 55
    unaryop                 go to state 56
    factor                  go to state 57
    mutable                 go to state 58
    immutable               go to state 59
    call                    go to state 60
    constant                go to state 61


State 13

   28 fundeclaration: ID LPAREN . params RPAREN statement
   31               | ID LPAREN . error RPAREN statement

    error  shift, and go to state 62
    BOOL   shift, and go to state 3
    CHAR   shift, and go to state 4
    INT    shift, and go to state 5

    RPAREN  reduce using rule 34 (params)

    typespecifier  go to state 63
    params         go to state 64
    paramlist      go to state 65
    paramtypelist  go to state 66


State 14

    0 $accept: program $end .

    $default  accept


State 15

   32 fundeclaration: error . LPAREN statement

    LPAREN  shift, and go to state 12


State 16

    2 declarationlist: declarationlist declaration .

    $default  reduce using rule 2 (declarationlist)


State 17

    8 vardeclaration: typespecifier error . SEMI
   13 vardecllist: error . COMMA vardeclinitialize
   16 vardeclinitialize: error . COLON simpleexpression
   20 vardeclid: error . LBRACKET NUMCONST RBRACKET
   29 fundeclaration: typespecifier error . LPAREN params RPAREN statement

    COMMA     shift, and go to state 67
    LBRACKET  shift, and go to state 68
    LPAREN    shift, and go to state 69
    SEMI      shift, and go to state 70
    COLON     shift, and go to state 71


State 18

   18 vardeclid: ID .
   19          | ID . LBRACKET NUMCONST RBRACKET
   21          | ID . LBRACKET error
   27 fundeclaration: typespecifier ID . LPAREN params RPAREN statement
   30               | typespecifier ID . LPAREN error

    LBRACKET  shift, and go to state 72
    LPAREN    shift, and go to state 73

    $default  reduce using rule 18 (vardeclid)


State 19

    7 vardeclaration: typespecifier vardecllist . SEMI
   11 vardecllist: vardecllist . COMMA vardeclinitialize

    COMMA  shift, and go to state 74
    SEMI   shift, and go to state 75


State 20

   12 vardecllist: vardeclinitialize .

    $default  reduce using rule 12 (vardecllist)


State 21

   14 vardeclinitialize: vardeclid .
   15                  | vardeclid . COLON simpleexpression
   17                  | vardeclid . COLON error

    COLON  shift, and go to state 76

    $default  reduce using rule 14 (vardeclinitialize)


State 22

   57 compoundstmt: error . RBRACE
   66 expressionstmt: error . SEMI

    RBRACE  shift, and go to state 77
    SEMI    shift, and go to state 78


State 23

  113 mutable: ID .
  114        | ID . LBRACKET expression RBRACKET
  118 call: ID . LPAREN args RPAREN

    LBRACKET  shift, and go to state 79
    LPAREN    shift, and go to state 80

    $default  reduce using rule 113 (mutable)


State 24

  125 constant: NUMCONST .

    $default  reduce using rule 125 (constant)


State 25

  126 constant: CHARCONST .

    $default  reduce using rule 126 (constant)


State 26

  127 constant: STRINGCONST .

    $default  reduce using rule 127 (constant)


State 27

   77 breakstmt: BREAK . SEMI

    SEMI  shift, and go to state 81


State 28

  129 constant: FALSE .

    $default  reduce using rule 129 (constant)


State 29

   69 matchedselectionstmt: FOREACH . LPAREN mutable IN simpleexpression RPAREN matchedselectionstmt
   74 unmatchedselectionstmt: FOREACH . LPAREN mutable IN simpleexpression RPAREN unmatchedselectionstmt

    LPAREN  shift, and go to state 82


State 30

   67 matchedselectionstmt: IF . LPAREN simpleexpression RPAREN matchedselectionstmt ELSE matchedselectionstmt
   71 unmatchedselectionstmt: IF . LPAREN simpleexpression RPAREN statement
   72                       | IF . LPAREN simpleexpression RPAREN matchedselectionstmt ELSE unmatchedselectionstmt

    LPAREN  shift, and go to state 83


State 31

   88 unaryrelexpression: NOT . unaryrelexpression

    ID           shift, and go to state 23
    NUMCONST     shift, and go to state 24
    CHARCONST    shift, and go to state 25
    STRINGCONST  shift, and go to state 26
    FALSE        shift, and go to state 28
    NOT          shift, and go to state 31
    TRUE         shift, and go to state 33
    LPAREN       shift, and go to state 35
    MINUS        shift, and go to state 38
    MULTI        shift, and go to state 39

    unaryrelexpression  go to state 84
    relexpression       go to state 52
    sumexpression       go to state 53
    term                go to state 54
    unaryexpression     go to state 55
    unaryop             go to state 56
    factor              go to state 57
    mutable             go to state 85
    immutable           go to state 59
    call                go to state 60
    constant            go to state 61


State 32

   75 returnstmt: RETURN . SEMI
   76           | RETURN . expression SEMI

    ID           shift, and go to state 23
    NUMCONST     shift, and go to state 24
    CHARCONST    shift, and go to state 25
    STRINGCONST  shift, and go to state 26
    FALSE        shift, and go to state 28
    NOT          shift, and go to state 31
    TRUE         shift, and go to state 33
    LPAREN       shift, and go to state 35
    SEMI         shift, and go to state 86
    MINUS        shift, and go to state 38
    MULTI        shift, and go to state 39

    expression          go to state 87
    simpleexpression    go to state 49
    andexpression       go to state 50
    unaryrelexpression  go to state 51
    relexpression       go to state 52
    sumexpression       go to state 53
    term                go to state 54
    unaryexpression     go to state 55
    unaryop             go to state 56
    factor              go to state 57
    mutable             go to state 58
    immutable           go to state 59
    call                go to state 60
    constant            go to state 61


State 33

  128 constant: TRUE .

    $default  reduce using rule 128 (constant)


State 34

   68 matchedselectionstmt: WHILE . LPAREN simpleexpression RPAREN matchedselectionstmt
   73 unmatchedselectionstmt: WHILE . LPAREN simpleexpression RPAREN unmatchedselectionstmt

    LPAREN  shift, and go to state 88


State 35

  115 immutable: LPAREN . expression RPAREN

    ID           shift, and go to state 23
    NUMCONST     shift, and go to state 24
    CHARCONST    shift, and go to state 25
    STRINGCONST  shift, and go to state 26
    FALSE        shift, and go to state 28
    NOT          shift, and go to state 31
    TRUE         shift, and go to state 33
    LPAREN       shift, and go to state 35
    MINUS        shift, and go to state 38
    MULTI        shift, and go to state 39

    expression          go to state 89
    simpleexpression    go to state 49
    andexpression       go to state 50
    unaryrelexpression  go to state 51
    relexpression       go to state 52
    sumexpression       go to state 53
    term                go to state 54
    unaryexpression     go to state 55
    unaryop             go to state 56
    factor              go to state 57
    mutable             go to state 58
    immutable           go to state 59
    call                go to state 60
    constant            go to state 61


State 36

   56 compoundstmt: LBRACE . localdeclarations statementlist RBRACE
   58             | LBRACE . error statementlist RBRACE

    error  shift, and go to state 90

    error        [reduce using rule 60 (localdeclarations)]
    ID           reduce using rule 60 (localdeclarations)
    NUMCONST     reduce using rule 60 (localdeclarations)
    CHARCONST    reduce using rule 60 (localdeclarations)
    STRINGCONST  reduce using rule 60 (localdeclarations)
    BREAK        reduce using rule 60 (localdeclarations)
    BOOL         reduce using rule 60 (localdeclarations)
    CHAR         reduce using rule 60 (localdeclarations)
    FALSE        reduce using rule 60 (localdeclarations)
    FOREACH      reduce using rule 60 (localdeclarations)
    IF           reduce using rule 60 (localdeclarations)
    INT          reduce using rule 60 (localdeclarations)
    NOT          reduce using rule 60 (localdeclarations)
    RETURN       reduce using rule 60 (localdeclarations)
    TRUE         reduce using rule 60 (localdeclarations)
    STATIC       reduce using rule 60 (localdeclarations)
    WHILE        reduce using rule 60 (localdeclarations)
    LPAREN       reduce using rule 60 (localdeclarations)
    LBRACE       reduce using rule 60 (localdeclarations)
    RBRACE       reduce using rule 60 (localdeclarations)
    SEMI         reduce using rule 60 (localdeclarations)
    MINUS        reduce using rule 60 (localdeclarations)
    MULTI        reduce using rule 60 (localdeclarations)

    localdeclarations  go to state 91


State 37

   65 expressionstmt: SEMI .

    $default  reduce using rule 65 (expressionstmt)


State 38

  109 unaryop: MINUS .

    $default  reduce using rule 109 (unaryop)


State 39

  110 unaryop: MULTI .

    $default  reduce using rule 110 (unaryop)


State 40

   32 fundeclaration: error LPAREN statement .

    $default  reduce using rule 32 (fundeclaration)


State 41

   70 matchedselectionstmt: sstatement .

    $default  reduce using rule 70 (matchedselectionstmt)


State 42

   53 sstatement: compoundstmt .

    $default  reduce using rule 53 (sstatement)


State 43

   52 sstatement: expressionstmt .

    $default  reduce using rule 52 (sstatement)


State 44

   48 statement: matchedselectionstmt .
   50          | matchedselectionstmt . error

    error  shift, and go to state 92

    $end         reduce using rule 48 (statement)
    error        [reduce using rule 48 (statement)]
    ID           reduce using rule 48 (statement)
    NUMCONST     reduce using rule 48 (statement)
    CHARCONST    reduce using rule 48 (statement)
    STRINGCONST  reduce using rule 48 (statement)
    BREAK        reduce using rule 48 (statement)
    BOOL         reduce using rule 48 (statement)
    CHAR         reduce using rule 48 (statement)
    FALSE        reduce using rule 48 (statement)
    FOREACH      reduce using rule 48 (statement)
    IF           reduce using rule 48 (statement)
    INT          reduce using rule 48 (statement)
    NOT          reduce using rule 48 (statement)
    RETURN       reduce using rule 48 (statement)
    TRUE         reduce using rule 48 (statement)
    WHILE        reduce using rule 48 (statement)
    LPAREN       reduce using rule 48 (statement)
    LBRACE       reduce using rule 48 (statement)
    RBRACE       reduce using rule 48 (statement)
    SEMI         reduce using rule 48 (statement)
    MINUS        reduce using rule 48 (statement)
    MULTI        reduce using rule 48 (statement)


State 45

   49 statement: unmatchedselectionstmt .
   51          | unmatchedselectionstmt . error

    error  shift, and go to state 93

    $end         reduce using rule 49 (statement)
    error        [reduce using rule 49 (statement)]
    ID           reduce using rule 49 (statement)
    NUMCONST     reduce using rule 49 (statement)
    CHARCONST    reduce using rule 49 (statement)
    STRINGCONST  reduce using rule 49 (statement)
    BREAK        reduce using rule 49 (statement)
    BOOL         reduce using rule 49 (statement)
    CHAR         reduce using rule 49 (statement)
    FALSE        reduce using rule 49 (statement)
    FOREACH      reduce using rule 49 (statement)
    IF           reduce using rule 49 (statement)
    INT          reduce using rule 49 (statement)
    NOT          reduce using rule 49 (statement)
    RETURN       reduce using rule 49 (statement)
    TRUE         reduce using rule 49 (statement)
    WHILE        reduce using rule 49 (statement)
    LPAREN       reduce using rule 49 (statement)
    LBRACE       reduce using rule 49 (statement)
    RBRACE       reduce using rule 49 (statement)
    SEMI         reduce using rule 49 (statement)
    MINUS        reduce using rule 49 (statement)
    MULTI        reduce using rule 49 (statement)


State 46

   54 sstatement: returnstmt .

    $default  reduce using rule 54 (sstatement)


State 47

   55 sstatement: breakstmt .

    $default  reduce using rule 55 (sstatement)


State 48

   64 expressionstmt: expression . SEMI

    SEMI  shift, and go to state 94


State 49

   83 expression: simpleexpression .
   84 simpleexpression: simpleexpression . OR andexpression

    OR  shift, and go to state 95

    $default  reduce using rule 83 (expression)


State 50

   85 simpleexpression: andexpression .
   86 andexpression: andexpression . AND unaryrelexpression

    AND  shift, and go to state 96

    $default  reduce using rule 85 (simpleexpression)


State 51

   87 andexpression: unaryrelexpression .

    $default  reduce using rule 87 (andexpression)


State 52

   89 unaryrelexpression: relexpression .

    $default  reduce using rule 89 (unaryrelexpression)


State 53

   90 relexpression: sumexpression . relop sumexpression
   91              | sumexpression .
   98 sumexpression: sumexpression . sumop term

    EQUIV    shift, and go to state 97
    NEQ      shift, and go to state 98
    LEQ      shift, and go to state 99
    LESSER   shift, and go to state 100
    GEQ      shift, and go to state 101
    GREATER  shift, and go to state 102
    PLUS     shift, and go to state 103
    MINUS    shift, and go to state 104

    $default  reduce using rule 91 (relexpression)

    relop  go to state 105
    sumop  go to state 106


State 54

   99 sumexpression: term .
  102 term: term . mulop unaryexpression

    DIVIDE  shift, and go to state 107
    MOD     shift, and go to state 108
    MULTI   shift, and go to state 109

    $default  reduce using rule 99 (sumexpression)

    mulop  go to state 110


State 55

  103 term: unaryexpression .

    $default  reduce using rule 103 (term)


State 56

  107 unaryexpression: unaryop . unaryexpression

    ID           shift, and go to state 23
    NUMCONST     shift, and go to state 24
    CHARCONST    shift, and go to state 25
    STRINGCONST  shift, and go to state 26
    FALSE        shift, and go to state 28
    TRUE         shift, and go to state 33
    LPAREN       shift, and go to state 35
    MINUS        shift, and go to state 38
    MULTI        shift, and go to state 39

    unaryexpression  go to state 111
    unaryop          go to state 56
    factor           go to state 57
    mutable          go to state 85
    immutable        go to state 59
    call             go to state 60
    constant         go to state 61


State 57

  108 unaryexpression: factor .

    $default  reduce using rule 108 (unaryexpression)


State 58

   78 expression: mutable . ASSIGN expression
   79           | mutable . PASSIGN expression
   80           | mutable . MASSIGN expression
   81           | mutable . INC
   82           | mutable . DEC
  112 factor: mutable .

    ASSIGN   shift, and go to state 112
    PASSIGN  shift, and go to state 113
    MASSIGN  shift, and go to state 114
    DEC      shift, and go to state 115
    INC      shift, and go to state 116

    $default  reduce using rule 112 (factor)


State 59

  111 factor: immutable .

    $default  reduce using rule 111 (factor)


State 60

  116 immutable: call .

    $default  reduce using rule 116 (immutable)


State 61

  117 immutable: constant .

    $default  reduce using rule 117 (immutable)


State 62

   31 fundeclaration: ID LPAREN error . RPAREN statement
   37 paramlist: error . SEMI paramtypelist

    RPAREN  shift, and go to state 117
    SEMI    shift, and go to state 118


State 63

   38 paramtypelist: typespecifier . paramidlist
   39              | typespecifier . error

    error  shift, and go to state 119
    ID     shift, and go to state 120

    paramidlist  go to state 121
    paramid      go to state 122


State 64

   28 fundeclaration: ID LPAREN params . RPAREN statement

    RPAREN  shift, and go to state 123


State 65

   33 params: paramlist .
   35 paramlist: paramlist . SEMI paramtypelist

    SEMI  shift, and go to state 124

    $default  reduce using rule 33 (params)


State 66

   36 paramlist: paramtypelist .

    $default  reduce using rule 36 (paramlist)


State 67

   13 vardecllist: error COMMA . vardeclinitialize

    error  shift, and go to state 125
    ID     shift, and go to state 126

    vardeclinitialize  go to state 127
    vardeclid          go to state 21


State 68

   20 vardeclid: error LBRACKET . NUMCONST RBRACKET

    NUMCONST  shift, and go to state 128


State 69

   29 fundeclaration: typespecifier error LPAREN . params RPAREN statement

    error  shift, and go to state 129
    BOOL   shift, and go to state 3
    CHAR   shift, and go to state 4
    INT    shift, and go to state 5

    RPAREN  reduce using rule 34 (params)

    typespecifier  go to state 63
    params         go to state 130
    paramlist      go to state 65
    paramtypelist  go to state 66


State 70

    8 vardeclaration: typespecifier error SEMI .

    $default  reduce using rule 8 (vardeclaration)


State 71

   16 vardeclinitialize: error COLON . simpleexpression

    ID           shift, and go to state 23
    NUMCONST     shift, and go to state 24
    CHARCONST    shift, and go to state 25
    STRINGCONST  shift, and go to state 26
    FALSE        shift, and go to state 28
    NOT          shift, and go to state 31
    TRUE         shift, and go to state 33
    LPAREN       shift, and go to state 35
    MINUS        shift, and go to state 38
    MULTI        shift, and go to state 39

    simpleexpression    go to state 131
    andexpression       go to state 50
    unaryrelexpression  go to state 51
    relexpression       go to state 52
    sumexpression       go to state 53
    term                go to state 54
    unaryexpression     go to state 55
    unaryop             go to state 56
    factor              go to state 57
    mutable             go to state 85
    immutable           go to state 59
    call                go to state 60
    constant            go to state 61


State 72

   19 vardeclid: ID LBRACKET . NUMCONST RBRACKET
   21          | ID LBRACKET . error

    error     shift, and go to state 132
    NUMCONST  shift, and go to state 133


State 73

   27 fundeclaration: typespecifier ID LPAREN . params RPAREN statement
   30               | typespecifier ID LPAREN . error

    error  shift, and go to state 134
    BOOL   shift, and go to state 3
    CHAR   shift, and go to state 4
    INT    shift, and go to state 5

    RPAREN  reduce using rule 34 (params)

    typespecifier  go to state 63
    params         go to state 135
    paramlist      go to state 65
    paramtypelist  go to state 66


State 74

   11 vardecllist: vardecllist COMMA . vardeclinitialize

    error  shift, and go to state 125
    ID     shift, and go to state 126

    vardeclinitialize  go to state 136
    vardeclid          go to state 21


State 75

    7 vardeclaration: typespecifier vardecllist SEMI .

    $default  reduce using rule 7 (vardeclaration)


State 76

   15 vardeclinitialize: vardeclid COLON . simpleexpression
   17                  | vardeclid COLON . error

    error        shift, and go to state 137
    ID           shift, and go to state 23
    NUMCONST     shift, and go to state 24
    CHARCONST    shift, and go to state 25
    STRINGCONST  shift, and go to state 26
    FALSE        shift, and go to state 28
    NOT          shift, and go to state 31
    TRUE         shift, and go to state 33
    LPAREN       shift, and go to state 35
    MINUS        shift, and go to state 38
    MULTI        shift, and go to state 39

    simpleexpression    go to state 138
    andexpression       go to state 50
    unaryrelexpression  go to state 51
    relexpression       go to state 52
    sumexpression       go to state 53
    term                go to state 54
    unaryexpression     go to state 55
    unaryop             go to state 56
    factor              go to state 57
    mutable             go to state 85
    immutable           go to state 59
    call                go to state 60
    constant            go to state 61


State 77

   57 compoundstmt: error RBRACE .

    $default  reduce using rule 57 (compoundstmt)


State 78

   66 expressionstmt: error SEMI .

    $default  reduce using rule 66 (expressionstmt)


State 79

  114 mutable: ID LBRACKET . expression RBRACKET

    ID           shift, and go to state 23
    NUMCONST     shift, and go to state 24
    CHARCONST    shift, and go to state 25
    STRINGCONST  shift, and go to state 26
    FALSE        shift, and go to state 28
    NOT          shift, and go to state 31
    TRUE         shift, and go to state 33
    LPAREN       shift, and go to state 35
    MINUS        shift, and go to state 38
    MULTI        shift, and go to state 39

    expression          go to state 139
    simpleexpression    go to state 49
    andexpression       go to state 50
    unaryrelexpression  go to state 51
    relexpression       go to state 52
    sumexpression       go to state 53
    term                go to state 54
    unaryexpression     go to state 55
    unaryop             go to state 56
    factor              go to state 57
    mutable             go to state 58
    immutable           go to state 59
    call                go to state 60
    constant            go to state 61


State 80

  118 call: ID LPAREN . args RPAREN

    ID           shift, and go to state 23
    NUMCONST     shift, and go to state 24
    CHARCONST    shift, and go to state 25
    STRINGCONST  shift, and go to state 26
    FALSE        shift, and go to state 28
    NOT          shift, and go to state 31
    TRUE         shift, and go to state 33
    LPAREN       shift, and go to state 35
    MINUS        shift, and go to state 38
    MULTI        shift, and go to state 39

    $default  reduce using rule 120 (args)

    expression          go to state 140
    simpleexpression    go to state 49
    andexpression       go to state 50
    unaryrelexpression  go to state 51
    relexpression       go to state 52
    sumexpression       go to state 53
    term                go to state 54
    unaryexpression     go to state 55
    unaryop             go to state 56
    factor              go to state 57
    mutable             go to state 58
    immutable           go to state 59
    call                go to state 60
    args                go to state 141
    arglist             go to state 142
    constant            go to state 61


State 81

   77 breakstmt: BREAK SEMI .

    $default  reduce using rule 77 (breakstmt)


State 82

   69 matchedselectionstmt: FOREACH LPAREN . mutable IN simpleexpression RPAREN matchedselectionstmt
   74 unmatchedselectionstmt: FOREACH LPAREN . mutable IN simpleexpression RPAREN unmatchedselectionstmt

    ID  shift, and go to state 143

    mutable  go to state 144


State 83

   67 matchedselectionstmt: IF LPAREN . simpleexpression RPAREN matchedselectionstmt ELSE matchedselectionstmt
   71 unmatchedselectionstmt: IF LPAREN . simpleexpression RPAREN statement
   72                       | IF LPAREN . simpleexpression RPAREN matchedselectionstmt ELSE unmatchedselectionstmt

    ID           shift, and go to state 23
    NUMCONST     shift, and go to state 24
    CHARCONST    shift, and go to state 25
    STRINGCONST  shift, and go to state 26
    FALSE        shift, and go to state 28
    NOT          shift, and go to state 31
    TRUE         shift, and go to state 33
    LPAREN       shift, and go to state 35
    MINUS        shift, and go to state 38
    MULTI        shift, and go to state 39
